# manga-downloader

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/manga_downloader/: __init__.py  __main__.py  cli.py  scraper.py  utils.py
